<resources>
    <string name="app_name">Item List</string>
    <string name="action_settings">Settings</string>
    <string name="add_item">Add Item</string>
    <string name="enter_item">Enter item</string>
    <string name="hint_enter_item">Enter Item</string>
    <string name="hint_enter_quantity">Enter Quantity</string>
    <string name="hint_enter_color">Enter Color</string>
    <string name="hint_enter_size">Enter Size</string>
    <string name="saveButton_text">Save</string>
    <string name="are_you_sure">Are you sure you want to delete this item?</string>
    <string name="no_text">No</string>
    <string name="yes_text">Yes</string>
    <string name="edit_item_text">Edit Item</string>
    <string name="enter_description">Enter Description</string>
</resources>
