<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="newItem"
            type="com.elevenine.babyneeds.data.db.ItemEntity" />
    </data>

    <LinearLayout
        android:id="@+id/popup_layout"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorPopupBackground">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="24dp">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="@dimen/side_margin"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="@dimen/side_margin"
                    android:text="@string/enter_item"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/item_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/title"
                    android:layout_marginStart="@dimen/side_margin"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="@dimen/side_margin"
                    android:hint="@string/hint_enter_item"
                    android:textColor="@android:color/white"
                    android:text="@{newItem.itemName}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title" />

                <EditText
                    android:id="@+id/itemQty_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/item_editText"
                    android:layout_marginStart="@dimen/side_margin"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="@dimen/side_margin"
                    android:hint="@string/hint_enter_quantity"
                    android:inputType="number"
                    android:textColor="@android:color/white"
                    app:intToStringEditText="@{newItem}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/item_editText" />

                <EditText
                    android:id="@+id/itemDescription_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/itemQty_editText"
                    android:layout_marginStart="@dimen/side_margin"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="@dimen/side_margin"
                    android:hint="@string/enter_description"
                    android:textColor="@android:color/white"
                    android:text="@{newItem.itemDescription}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/itemQty_editText" />

                <Button
                    android:id="@+id/save_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/side_margin"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="@dimen/side_margin"
                    android:background="#B3174F"
                    android:text="@string/saveButton_text"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/itemDescription_editText" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>